--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>StudyGroup</title>
@@ -8,9 +9,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root>Loading...</app-root>
   <script src="assets/js/jquery.js"></script>
+  <script src="assets/js/tether.js"></script>
   <script src="assets/js/bootstrap.js"></script>
 </body>
+
 </html>
