--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <app-root>Loading...</app-root>
   <script src="assets/js/jquery.js"></script>
   <script src="assets/js/tether.js"></script>
-  <script src="assets/js/bootstrap.js"></script>
+  <script src="assets/js/bootstrap.min.js"></script>
 </body>
 
 </html>
